--- a/Lixo-Mestre/LixoPapao.storyboard
+++ b/Lixo-Mestre/LixoPapao.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="14A343f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="5Zu-ED-0Wm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="14A361c" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="5Zu-ED-0Wm">
     <dependencies>
         <deployment version="1792" defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -196,7 +196,7 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <size key="freeformSize" width="320" height="480"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" backgroundImage="fundo.png" id="t4M-Re-BWe">
+                    <tabBar key="tabBar" contentMode="scaleToFill" backgroundImage="fundo.jpg" id="t4M-Re-BWe">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -362,7 +362,7 @@
         <image name="bixos papoes-01.png" width="970" height="1011"/>
         <image name="conectividade-02.png" width="920" height="210"/>
         <image name="conectividade-03.png" width="920" height="210"/>
-        <image name="fundo.png" width="180" height="35"/>
+        <image name="fundo.jpg" width="180" height="35"/>
         <image name="logoo.png" width="1294" height="869"/>
         <image name="mapa-melhor$.png" width="51" height="51"/>
         <image name="mapa-melhorcoleta.png" width="51" height="51"/>
